--- a/src/components/Details.css
+++ b/src/components/Details.css
@@ -6,7 +6,17 @@ border-bottom: 1px solid #eee;
 margin-bottom: 30px;
 }
 
+.body{
+font-family: sans-serif;
+font-size: larger;
+font-weight: bold;
+}
+
 .name-heading{
 color:#ed5441;
 font-family: "Open Sans", serif;
+}
+
+.related-glass-data-styling{
+color:#ed5441;
 }
